fix: resolve layout issue in the control bar

--- a/src/themes/lion.css
+++ b/src/themes/lion.css
@@ -128,12 +128,17 @@
   background-image: linear-gradient(to top, rgba(0, 0, 0, 0.69), rgba(0, 0, 0, 0));
   padding-left: 1em;
   padding-right: 1em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 /* Play Button */
 .vjs-theme-lion .vjs-play-control {
   font-size: 1.2em;
-  margin-top: -6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .vjs-theme-lion .vjs-play-control .vjs-icon-placeholder::before {
@@ -144,6 +149,13 @@
 .vjs-theme-lion .vjs-play-control:hover .vjs-icon-placeholder::before {
   background: none;
   color: var(--vjs-theme-lion--secondary);
+}
+
+.video-js .vjs-big-play-button .vjs-icon-placeholder::before,
+.video-js .vjs-modal-dialog,
+.vjs-button > .vjs-icon-placeholder::before,
+.vjs-modal-dialog .vjs-modal-dialog-content {
+  position: inherit !important;
 }
 
 /* Volume stuff */
@@ -169,6 +181,18 @@
 
 .vjs-theme-lion .vjs-control .vjs-volume-vertical {
   background-color: transparent;
+}
+
+.video-js .vjs-mute-control .vjs-icon-placeholder,
+.vjs-icon-volume-high,
+.video-js .vjs-mute-control.vjs-vol-2 .vjs-icon-placeholder,
+.vjs-icon-volume-mid,
+.video-js .vjs-mute-control.vjs-vol-1 .vjs-icon-placeholder,
+.vjs-icon-volume-low {
+  font-family: VideoJS;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.1em;
 }
 
 /* Progress Bar */
